[package]
name = "ta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
futures = "0.3"
serde = "1.0.160"
tarpc = { version = "0.33", features = ["tokio1", "serde-transport", "tcp", "serde-transport-json"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "net"] }
tokio-serde = "0.8.0"
